--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,8 +3,9 @@ WORKDIR /usr/src/app
 RUN apt-get update && \
     apt-get install -y python3-pip
 
-COPY . /usr/src/app
+COPY requirements.txt ./
 RUN pip install -r requirements.txt
+COPY . .
 
 EXPOSE 8000
-CMD ["fastapi", "dev", "main.py"]
+CMD ["fastapi", "run", "main.py"]
