--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,15 @@
 services:
   frontend:
-    image: img-frontend
+    image: img-frontend:latest
     container_name: frontend
     ports:
       - "4200:4200"
     build:
       context: ./frontend
       dockerfile: ./Dockerfile
-    volumes:
-      - ./frontend/node_modules:/usr/src/app/node_modules
   backend:
-    image: img-backend
+    image: img-backend:latest
     container_name: backend
-    # ports:
-    #   - "8000:8000"
     build:
       context: ./backend
       dockerfile: ./Dockerfile
-  # proxy:
-  #   image: nginx:latest
-  #   container_name: nginx
-  #   volumes:
-  #     - ./nginx.conf:/etc/nginx/nginx.conf
-  #   ports:
-  #     - "80:80"
-  #   command: command nginx -g 'daemon off;'
-  
